add pwa support

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <title>Drank Lite</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="/Hydration-logo.jpg" type="image/jpg">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="/Hydration-logo.jpg">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
   <div class="blur"></div>
