--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 <body>
-  <div class="blur"></div>
+  <!-- <div class="blur"></div> -->
   <div class="container">
     <h1>Hydration Tracker</h1>
 
