--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <!-- <div class="blur"></div> -->
   <div class="container">
-    <h1>Hydration Tracker</h1>
+    <h1>Drank</h1>
 
     <label for="goal">Daily Goal (cups):</label>
     <input type="number" id="goal" value="8">
@@ -30,7 +30,7 @@
     <p id="congrats-message"></p>
 
     <!-- Big Log Water Button -->
-    <button id="log-water-btn" class="big-button">Log Water</button>
+    <button id="log-water-btn" class="big-button">Log Drink</button>
 
     <!-- Modal Popup for logging drinks -->
     <div id="log-modal" class="modal">
