--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta property="og:title" content="Drank Lite">
+  <meta property="og:title" content="Drank">
   <meta property="og:description" content="A simple and modern water tracker.">
   <!-- <meta property="og:image" content="https://byteforge.pages.dev/Images/Preview.jpg"> -->
   <meta property="og:url" content="https://dranklite.pages.dev/">
@@ -32,8 +32,8 @@
   <!-- </div> -->
 
 
-  <div class="container" style="margin-top: 2rem;">
-    <h2>Log Your Drink</h2>
+  <div class="container">
+    <h2 style="margin-top: 0;">Log Your Drink</h2>
 
     <label for="drink-type">Drink Type:</label>
     <select id="drink-type"></select>
@@ -53,6 +53,13 @@
     <a href="/stats/">
       <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M18 3a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6a3 3 0 0 1 3-3zm-2.293 6.293a1 1 0 0 0-1.414 0L12 11.585l-1.293-1.292a1 1 0 0 0-1.414 0l-3 3a1 1 0 0 0 0 1.414l.094.083a1 1 0 0 0 1.32-.083L10 12.415l1.293 1.292l.094.083a1 1 0 0 0 1.32-.083L15 11.415l1.293 1.292a1 1 0 0 0 1.414-1.414z"/></svg>
     </a>
+  </div>
+
+  <!-- About -->
+  <div class="container" style="opacity: 0.6;">
+    <h2 style="margin-top: 0;">Drank</h2>
+    <h3 style="margin: 0;">A simple and modern water tracker.</h3>
+    <p style="margin: 0;">Made by <a href="https://asboy.framer.website">ash</a></p>
   </div>
 
   <!-- Script -->
