make about full opacity

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
   <!-- About -->
-  <div class="container" style="opacity: 0.6;">
+  <div class="container">
     <h2 style="margin-top: 0;">Drank</h2>
     <h3 style="margin: 0;">A simple and modern water tracker.</h3>
     <p style="margin: 0;">Made by <a href="https://asboy.framer.website">ash</a></p>
