--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="progress">
       <div id="progress-bar"></div>
     </div>
-    <p id="progress-text">You have consumed 0% of your daily goal.</p>
+    <p id="progress-text">You've drank 0% of your goal.</p>
     <p id="congrats-message"></p>
   <!-- </div> -->
 
